--- a/index.html
+++ b/index.html
@@ -23,184 +23,239 @@
 					<!-- topbar -->
 					<div class="container-topbar">
 						<h5 class="float-left font-viga text-custom-1 logo">Khairul<br>Fathan</h5>
-						<ul class="nav float-right">
+						<ul class="nav float-right" id="navbar">
 							<li class="nav-item ">
-								<a href="#" class="nav-link font-viga text-center text-custom-2">
+								<a href="#profile" class="nav-link font-viga text-center text-custom-2 page-scroll">
 									<i class="fas fa-user"></i>
 									<span>Profile</span>
 								</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link font-viga text-custom-2">
+								<a href="#education" class="nav-link font-viga text-custom-2 page-scroll">
 									<i class="fas fa-graduation-cap"></i>
 									<span>My Education</span>
 								</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link font-viga text-custom-2">
+								<a href="#schedule" class="nav-link font-viga text-custom-2 page-scroll">
 									<i class="fas fa-calendar-alt"></i>
 									<span>Schedule</span>
 								</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link font-viga text-custom-2">
+								<a href="#activity" class="nav-link font-viga text-custom-2 page-scroll">
 									<i class="fas fa-user-clock"></i>
 									<span>My Activity</span>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a href="#contact" class="nav-link font-viga text-custom-2 page-scroll">
+									<i class="fas fa-id-card"></i>
+									<span>Contact</span>
 								</a>
 							</li>
 						</ul>
 					</div>
 					<!-- akhir topbar -->
 					<!-- content Profil -->
-					<div class="container-profil">
-						<div class="row">
-							<div class="col-7">
-								<div class="content-profil">
-									<h1 class="display-4 font-montserrat-bold text-custom-1 title">Khairul Fathan</h1>
-									<h2 class="display-2 font-righteous text-custom-2 sub-title-1">Sistem Informasi</h2>
-									<p class="font-montserrat-thin text-custom-1 sub-title-2">Halo, Nama saya <span class="special">Fathan.</span> Saya adalah salah satu mahasiswa program studi <span class="special">Sistem Informasi</span> fakultas <span class="special">Sains & Teknologi</span> universitas <span class="special">Muhammadiya Gorontalo.</span></p>
+					<section id="profile">
+						<div class="container-profil">
+							<div class="row">
+								<div class="col-7">
+									<div class="content-profil">
+										<h1 class="display-4 font-montserrat-bold text-custom-1 title">Khairul Fathan</h1>
+										<h2 class="display-2 font-righteous text-custom-2 sub-title-1">Sistem Informasi</h2>
+										<p class="font-montserrat-thin text-custom-1 sub-title-2">Halo, Nama saya <span class="special">Fathan.</span> Saya adalah salah satu mahasiswa program studi <span class="special">Sistem Informasi</span> fakultas <span class="special">Sains & Teknologi</span> universitas <span class="special">Muhammadiya Gorontalo.</span></p>
+									</div>
 								</div>
+								<div class="col-5">
+									<div class="content-vektor-1">
+										<img src="assets/img/vektor-1.png">
+									</div>
+								</div>		
 							</div>
-							<div class="col-5">
-								<div class="content-vektor-1">
-									<img src="assets/img/vektor-1.png">
-								</div>
-							</div>		
 						</div>
-					</div>
+					</section>
 					<!-- akhir content profil -->
 					<!-- content pendidikan -->
-					<div class="container-pendidikan">
-						<div class="row">
-							<div class="col text-center">
-								<h3 class="text-custom-3 title title-pendidikan">
-									<i class="fas fa-graduation-cap"></i>
-									<span>My Education</span>
-								</h3>
-							</div>
-						</div>
-						<div class="row d-flex justify-content-end content-pendidikan">
-							<div class="content-vektor-2">
-								<img src="assets/img/vektor-2.png">
-							</div>
-							<div class="col-7">
-								<div class="pendidikan">
-									<h5 class="mb-0 text-custom-3 font-montserrat-bold">SDN No. 85 Kota Tengah</h5>
-									<div class="sub-pendidikan">
-										<p class="text-custom-1 font-righteous">2006-2012</p>
-									</div>
-								</div>
-								<div class="pendidikan">
-									<h5 class="mb-0 text-custom-3 font-montserrat-bold">MTsN Kota Gorontalo</h5>
-									<div class="sub-pendidikan">
-										<p class="text-custom-1 font-righteous">2012-2015</p>
-									</div>
-								</div>
-								<div class="pendidikan">
-									<h5 class="mb-0 text-custom-3 font-montserrat-bold">MAN Model Kota Gorontalo</h5>
-									<div class="sub-pendidikan">
-										<p class="text-custom-1 font-righteous">2015-2017</p>
-									</div>
-								</div>
-								<div class="pendidikan">
-									<h5 class="mb-0 text-custom-3 font-montserrat-bold">MA Muhammadiyah Kota Gorontalo</h5>
-									<div class="sub-pendidikan">
-										<p class="text-custom-1 font-righteous">2017-2018</p>
-									</div>
+					<section id="education">
+						<div class="container-pendidikan">
+							<div class="row">
+								<div class="col text-center">
+									<h3 class="text-custom-3 title title-pendidikan">
+										<i class="fas fa-graduation-cap"></i>
+										<span>My Education</span>
+									</h3>
 								</div>
 							</div>
-						</div>
-					</div>
-					<!-- akhir content pendidikan -->
-					<!-- content schedule -->
-					<div class="container-schedule">
-						<div class="row">
-							<div class="col text-center">
-								<h3 class="text-custom-1 title title-schedule">
-									<i class="fas fa-calendar-alt"></i>
-									<span>Schedule</span>
-								</h3>
-								<div class="row content-jadwal">
-									<div class="col-8">
-										<table class="table table-hover table-bordered">
-											<thead>
-												<tr>
-													<th scope="col">#</th>
-													<th scope="col">Hari</th>
-													<th scope="col" colspan="6">Mata Kuliah</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<th scope="row">1</th>
-													<td>Senin</td>
-													<td colspan="3">Bahasa Inggris</td>
-													<td colspan="3">Al-Islam dan kemuahammadiyaan</td>
-												</tr>
-												<tr>
-													<th scope="row">2</th>
-													<td>Selasa</td>
-													<td colspan="6">Konsep Sistem Informasi</td>
-												</tr>
-												<tr>
-													<th scope="row">3</th>
-													<td>Rabu</td>
-													<td colspan="3">Matematika Diskrit</td>
-													<td colspan="3">Teknologi Web</td>
-												</tr>
-												<tr>
-													<th scope="row">4</th>
-													<td>Kamis</td>
-													<td colspan="2">Basis Data</td>
-													<td colspan="2">Filsafat Ilmu</td>
-													<td colspan="2">Keamanan Komputer</td>
-												</tr>
-												<tr>
-													<th scope="row">5</th>
-													<td>Jum'at</td>
-													<td colspan="6">Jaringan Komputer</td>
-												</tr>
-											</tbody>
-										</table>
+							<div class="row d-flex justify-content-end content-pendidikan">
+								<div class="content-vektor-2">
+									<img src="assets/img/vektor-2.png">
+								</div>
+								<div class="col-7">
+									<div class="pendidikan">
+										<h5 class="mb-0 text-custom-3 font-montserrat-bold">SDN No. 85 Kota Tengah</h5>
+										<div class="sub-pendidikan">
+											<p class="text-custom-1 font-righteous">2006-2012</p>
+										</div>
 									</div>
-									<div class="col-4">
-										<div class="content-vektor-3">
-											<img src="assets/img/vektor-3.png">
+									<div class="pendidikan">
+										<h5 class="mb-0 text-custom-3 font-montserrat-bold">MTsN Kota Gorontalo</h5>
+										<div class="sub-pendidikan">
+											<p class="text-custom-1 font-righteous">2012-2015</p>
+										</div>
+									</div>
+									<div class="pendidikan">
+										<h5 class="mb-0 text-custom-3 font-montserrat-bold">MAN Model Kota Gorontalo</h5>
+										<div class="sub-pendidikan">
+											<p class="text-custom-1 font-righteous">2015-2017</p>
+										</div>
+									</div>
+									<div class="pendidikan">
+										<h5 class="mb-0 text-custom-3 font-montserrat-bold">MA Muhammadiyah Kota Gorontalo</h5>
+										<div class="sub-pendidikan">
+											<p class="text-custom-1 font-righteous">2017-2018</p>
 										</div>
 									</div>
 								</div>
-							</div>	
-						</div>			
-					</div>
+							</div>
+						</div>
+					</section>
+					<!-- akhir content pendidikan -->
+					<!-- content schedule -->
+					<section id="schedule">
+						<div class="container-schedule">
+							<div class="row">
+								<div class="col text-center">
+									<h3 class="text-custom-1 title title-schedule">
+										<i class="fas fa-calendar-alt"></i>
+										<span>Schedule</span>
+									</h3>
+									<div class="row content-jadwal">
+										<div class="col-8">
+											<table class="table table-hover table-bordered">
+												<thead>
+													<tr>
+														<th scope="col">#</th>
+														<th scope="col">Hari</th>
+														<th scope="col" colspan="6">Mata Kuliah</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<th scope="row">1</th>
+														<td>Senin</td>
+														<td colspan="3">Bahasa Inggris</td>
+														<td colspan="3">Al-Islam dan kemuahammadiyaan</td>
+													</tr>
+													<tr>
+														<th scope="row">2</th>
+														<td>Selasa</td>
+														<td colspan="6">Konsep Sistem Informasi</td>
+													</tr>
+													<tr>
+														<th scope="row">3</th>
+														<td>Rabu</td>
+														<td colspan="3">Matematika Diskrit</td>
+														<td colspan="3">Teknologi Web</td>
+													</tr>
+													<tr>
+														<th scope="row">4</th>
+														<td>Kamis</td>
+														<td colspan="2">Basis Data</td>
+														<td colspan="2">Filsafat Ilmu</td>
+														<td colspan="2">Keamanan Komputer</td>
+													</tr>
+													<tr>
+														<th scope="row">5</th>
+														<td>Jum'at</td>
+														<td colspan="6">Jaringan Komputer</td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+										<div class="col-4">
+											<div class="content-vektor-3">
+												<img src="assets/img/vektor-3.png">
+											</div>
+										</div>
+									</div>
+								</div>	
+							</div>			
+						</div>
+					</section>
 					<!-- akhir content shcedule -->
 					<!-- content activity -->
-					<div class="container-activity">
-						<div class="row">
-							<div class="col text-center">
-								<h3 class="text-custom-3 title title-activity">
-									<i class="fas fa-user-clock"></i>
-									<span>My Activity</span>
-								</h3>
-							</div>
-							<div class="container">
-								<div class="row content-activity">
-									<div class="col-4 activity-code text-center">
-										<img src="assets/img/activity-1.png">
-										<h5 class="text-custom-3 font-righteous">Coding</h5>
+					<section id="activity">
+						<div class="container-activity">
+							<div class="row">
+								<div class="col text-center">
+									<h3 class="text-custom-3 title title-activity">
+										<i class="fas fa-user-clock"></i>
+										<span>My Activity</span>
+									</h3>
+								</div>
+								<div class="container">
+									<div class="row content-activity">
+										<div class="col-4 activity-code text-center">
+											<img src="assets/img/activity-1.png">
+											<h5 class="text-custom-3 font-righteous">Coding</h5>
+										</div>
+										<div class="col-4 activity-learn text-center">
+											<img src="assets/img/activity-2.png">
+											<h5 class="text-custom-3 font-righteous">Learn</h5>
+										</div>	
+										<div class="col-4 activity-sport text-center">
+											<img src="assets/img/activity-3.png">
+											<h5 class="text-custom-3 font-righteous">Sport</h5>
+										</div>	
 									</div>
-									<div class="col-4 activity-learn text-center">
-										<img src="assets/img/activity-2.png">
-										<h5 class="text-custom-3 font-righteous">Learn</h5>
-									</div>	
-									<div class="col-4 activity-sport text-center">
-										<img src="assets/img/activity-3.png">
-										<h5 class="text-custom-3 font-righteous">Sport</h5>
-									</div>	
 								</div>
 							</div>
 						</div>
-					</div>
+					</section>
 					<!-- akhir content activity -->
+					<!-- content contact -->
+					<section id="contact">
+						<div class="container-contact">
+							<div class="row">
+								<div class="col text-center">
+									<h3 class="text-custom-1 title title-contact">
+										<i class="fas fa-id-card"></i>
+										<span>Contact</span>
+									</h3>
+								</div>
+							</div>
+							<form>
+								<div class="row content-contact">
+									<div class="col-7">
+										<div class="form-group">
+											<label for="email">Email</label>
+											<input type="email" name="email" id="email" class="form-control" autocomplete="off">
+										</div>
+										<div class="form-group">
+											<label for="nama">Nama</label>
+											<input type="nama" name="nama" id="nama" class="form-control" autocomplete="off">
+										</div>
+										<div class="form-group">
+											<label for="nope">No. HP</label>
+											<input type="nope" name="nope" id="nope" class="form-control" autocomplete="off">
+										</div>
+									</div>
+									<div class="col-5">
+										<div class="form-group">
+											<label for="pesan">Pesan</label>
+											<textarea name="pesan" id="pesan" rows="8" class="form-control"></textarea>
+										</div>
+									</div>
+									<div class="col text-center mt-2">
+										<button type="submit" class="btn btn-custom">Kirim Pesan</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</section>
+					<!-- akhir content contact -->
 				</div>
 				<div class="footer">
 					<div class="container">
@@ -216,6 +271,11 @@
 	</div>
 	<!-- akhir Container utama -->
 
+	<a href="#navbar" class="up page-scroll">
+		<div class="content-up">
+			<i class="fas fa-angle-up"></i>
+		</div>
+	</a>
 
 
 
@@ -224,5 +284,6 @@
 	<script src="assets/js/jquery-3.3.1.js"></script>
 	<script src="assets/js/popper.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/script.js"></script>
 </body>
 </html>
