Memeperbaiki tampilan mobile dan menambhakan break point baru

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<!-- content Profil -->
 					<section id="profile">
 						<div class="container-profil">
-							<div class="row">
+							<div class="row d-flex justify-content-center">
 								<div class="col-md-7 col-sm-12">
 									<div class="content-profil">
 										<h1 class="display-4 font-montserrat-bold text-custom-1 title">Khairul Fathan</h1>
@@ -89,11 +89,11 @@
 									</h3>
 								</div>
 							</div>
-							<div class="row d-flex justify-content-end content-pendidikan">
+							<div class="row d-flex justify-content-center content-pendidikan">
 								<div class="content-vektor-2">
 									<img src="assets/img/vektor-2.png">
 								</div>
-								<div class="col-md-7 col-sm-12">
+								<div class="col-md-7 col-sm-12 edu">
 									<div class="pendidikan">
 										<h5 class="mb-0 text-custom-3 font-montserrat-bold">SDN No. 85 Kota Tengah</h5>
 										<div class="sub-pendidikan">
@@ -132,7 +132,7 @@
 										<i class="fas fa-calendar-alt"></i>
 										<span>Schedule</span>
 									</h3>
-									<div class="row content-jadwal">
+									<div class="row d-flex justify-content-center content-jadwal">
 										<div class="col-md-8 col-sm-12">
 											<table class="table table-hover table-bordered table-1">
 												<thead>
